# infobot

./: .gitignore  .gitmodules  README.md  cfg.py  main.py  pyproject.toml  routes.py  sql.py
info/: weather.py
